<resources>
    <string name="app_name">Teszt</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hatter">hatter</string>
    <string name="logo">logo</string>
    <string name="reg">Register</string>
    <string name="loginerror">Hibaüzenet</string>
    <string name="sign_up">Sign up</string>
    <string name="Log">Login</string>
    <string name="logout">Logout</string>
</resources>